tests/negative/Termination/Data/Nat.juvix
module Data.Nat;

syntax fixity add := binary;
syntax fixity mul := binary {above := [add]};

type ℕ :=
  | zero : ℕ
  | suc : ℕ → ℕ;

syntax operator + add;

+ : ℕ → ℕ → ℕ
  | zero b := b
  | (suc a) b := suc (a + b);

syntax operator * mul;

* : ℕ → ℕ → ℕ
  | zero b := zero
  | (suc a) b := b + a * b;

import Data.Bool;
open Data.Bool;

even : ℕ → Bool

  | zero := true
  | (suc n) := odd n;

odd : ℕ → Bool

  | zero := false
  | (suc n) := even n;
